# rozsda-arpad

./: Cargo.toml  TRACK_SENDS_BUGS.md
src/: architecture.md  lib.rs  main.rs  shared.rs  traits.rs
src/midi/: base.rs  encoder_led_mappings.rs  mod.rs  xtouch.rs
src/modes/: mod.rs  mode_manager.rs  reaper.rs  reaper_channel_strip.rs  reaper_track_sends.rs  reaper_vol_pan.rs
src/motu/: api_spec.md  datastore.rs
src/osc/: context_gate.rs  generated_osc.rs  message_filtering.rs  mod.rs  osc.rs
src/osc/route_context/: context_gate.rs  context_gate_tests.rs  mod.rs
src/track/: track.rs
tests/: MANUAL_TESTS.md  mode_manager_tests.rs  mode_transition_tests.rs  track_manager_tests.rs  track_sends_mode_tests.rs  vol_pan_mode_tests.rs  xtouch_manual_tests.rs
tools/reaper_oscgen/: Cargo.toml
tools/reaper_oscgen/src/: main.rs
