[package]
name = "arpad-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
midir = "0.10.1"
rosc = "0.11.4"
helgoboss-midi = "0.4.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1"
bimap = "0.6.3"
crossbeam-channel = "0.5.15"
derive_more = { version = "2", features = ["from"] }

[workspace]
members = ["tools/reaper_oscgen"]
